framework-pkg/main/logging-utilities-core/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Catch errors during batch executions or other processes</description>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>