framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/DML_Process_Number__c.field-meta.xml
<CustomField>
    <fullName>DML_Process_Number__c</fullName>
    <description>Number of records processed through the batch execution</description>
    <label>Number of records processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>