framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>TimeStamp of the batch execution end</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>