framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/Error_Number__c.field-meta.xml
<CustomField>
    <fullName>Error_Number__c</fullName>
    <description>Number of errors related to this log record</description>
    <label>Number of errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>