framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>Parameters given during the batch initialization (Optional)</description>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>