framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>Name of the process (Batch, WebService, ect...) related to this log record</description>
    <label>Process Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>