framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <description>Type of the process related to this log record</description>
    <label>Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Batch</fullName>
            </value>
            <value>
                <fullName>Webservice</fullName>
            </value>
            <value>
                <fullName>Register_Consumer</fullName>
            </value>
            <value>
                <fullName>InCountry deletion</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>