framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/Queried_Records_Number__c.field-meta.xml
<CustomField>
    <fullName>Queried_Records_Number__c</fullName>
    <description>Contains the number of records retrieved by the SOQL query execution</description>
    <label>Number of records queried</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>