framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>The SOQL query used during the initialization phase of the batch execution</description>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>