framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>TimeStamp of the batch execution start</description>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>