framework-pkg/main/logging-utilities-core/default/objects/Log__c/fields/Success_Number__c.field-meta.xml
<CustomField>
    <fullName>Success_Number__c</fullName>
    <description>Number of successful DML operations completed during the batch execution</description>
    <label>Number of successful operations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>