framework-pkg/main/logging-utilities-core/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>End_Date__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Process_Type__c</columns>
    <columns>Queried_Records_Number__c</columns>
    <columns>DML_Process_Number__c</columns>
    <columns>Error_Number__c</columns>
    <columns>Success_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>